*Added ItemsPerPage property to SearchQuery class *Finalized Search function for SearchTerm, SelectedCounties and ItemsPerPage. *Fixed a typo in Seed Method

--- a/Stipendium/Views/Stipends/Index.cshtml
+++ b/Stipendium/Views/Stipends/Index.cshtml
@@ -5,6 +5,7 @@
 @{
     ViewBag.Title = "Index";
     ApplicationDbContext db = new ApplicationDbContext();
+    var query = ViewData["Query"] ?? new SearchQuery();
 }
 <style>
     .pagination {
@@ -21,7 +22,7 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-@{ Html.RenderPartial("_Search", new SearchQuery());}
+@{ Html.RenderPartial("_Search", query);}
 
 <div class="pagination">
 @Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
