Replaced _Search with SearchResults Replaced _Search controller actions with SearchResults relevant ones Added additional parameters to SearchQuery

--- a/Stipendium/Views/Stipends/Details.cshtml
+++ b/Stipendium/Views/Stipends/Details.cshtml
@@ -1,96 +1,25 @@
 ﻿@model Stipendium.Models.Stipend
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = Model.Title;
 }
 
-<h2>Details</h2>
+<h2>@Html.DisplayFor(model=>model.Title)</h2>
 
 <div>
-    <h4>Stipend</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
+    
+    <h3>@Html.DisplayFor(model=>model.Title)</h3>
+    <h4>@Html.DisplayFor(model=>model.AddressLine1)</h4>
+    <h4>@Html.DisplayFor(model=>model.PostNr) @Html.DisplayFor(model=>model.Municipality)</h4>
+    <br />
+    <h4>Org.Nr: @Html.DisplayFor(model=>model.OrgNr)</h4>
+    <br />
+    <p>@Html.DisplayFor(model=>model.Description)</p>
+    <br />
+    <p>Förmögenhet: @Html.DisplayFor(model=>model.Capital) kr</p>
 
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AddressLine1)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AddressLine1)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AddressLine2)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AddressLine2)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PostNr)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PostNr)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.County)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.County)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ContactInfo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ContactInfo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.OrgNr)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.OrgNr)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Capital)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Capital)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AcceptsApplications)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AcceptsApplications)
-        </dd>
-
-    </dl>
+        
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
