--- a/Stipendium/Views/Stipends/Details.cshtml
+++ b/Stipendium/Views/Stipends/Details.cshtml
@@ -11,6 +11,10 @@
     
     <h3>@Html.DisplayFor(model=>model.Title)</h3>
     <h4>@Html.DisplayFor(model=>model.AddressLine1)</h4>
+    @if(Model.AddressLine2!=null)
+    {
+        <h4>@Html.DisplayFor(model=>model.AddressLine2)</h4>
+    }
     <h4>@Html.DisplayFor(model=>model.PostNr) @Html.DisplayFor(model=>model.Municipality)</h4>
     <br />
     <h4>Org.Nr: @Html.DisplayFor(model=>model.OrgNr)</h4>
