Added Stiftelse model Added "Admin" user role Added a user with "Admin" role Added functionality to upload Excel files and export data to database

--- a/Stipendium/Views/Shared/_Layout.cshtml
+++ b/Stipendium/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Stipends","Index","Stipends")</li>
+                    <li>@Html.ActionLink("Stiftelses","Index","Stiftelses")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
