--- a/Stipendium/Views/Stipends/Details.cshtml
+++ b/Stipendium/Views/Stipends/Details.cshtml
@@ -21,7 +21,7 @@
     <br />
     <p>@Html.DisplayFor(model=>model.Description)</p>
     <br />
-    <p>Förmögenhet: @Html.DisplayFor(model=>model.Capital) kr</p>
+    <p>Förmögenhet: @Html.DisplayFor(model=>model.Capital).ToString("###,###") kr</p>
 
         
 </div>
