--- a/Stipendium/Views/Shared/_LoginPartial.cshtml
+++ b/Stipendium/Views/Shared/_LoginPartial.cshtml
@@ -1,22 +1,63 @@
 ﻿@using Microsoft.AspNet.Identity
-@if (Request.IsAuthenticated)
-{
-    using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
-    {
-    @Html.AntiForgeryToken()
+@using Stipendium.Models
+<ul class="nav navbar-nav" style="float:right">
+    <li class="nav-item dropdown">
+        <a style="font-size: 16px" nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
+        <div class="dropdown-menu dropdown-menu-right" style="padding: 10px; min-width: 200px">
+            @if (Request.IsAuthenticated)
+            {
+                <ul type="none">
+                    <li><span class="glyphicon glyphicon-pencil"></span> @Html.ActionLink("Manage", "Index", "Manage", routeValues: null, htmlAttributes: new { @class = "dropdown-item", title = "Manage" })</li>
+                    <li><span class="glyphicon glyphicon-open-file"></span> @Html.ActionLink("Upload", "UploadExcel", "Stiftelses")</li>
+                </ul>
+                
+            }
+            else
+            {
+                using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="form-group" style="display:table-row">
+                        <label class="control-label" for="Email">Email</label>
+                        <div>
+                            <input class="form-control" data-val="true" data-val-email="Fältet Email är inte en giltig e-postadress." data-val-required="Fältet Email krävs." id="Email" name="Email" type="text" value="">
+                        </div>
+                    </div>
+                    <div class="form-group" style="display:table-row">
+                        <label class="control-label" for="Password">Password</label>
+                        <div>
+                            <input class="form-control" data-val="true" data-val-required="Fältet Password krävs." id="Password" name="Password" type="password">
+                        </div>
+                    </div>
+                    <div class="form-group" style="display:table-row">
+                        <div>
+                            <div class="checkbox">
+                                <input data-val="true" data-val-required="Fältet Remember me? krävs." id="RememberMe" name="RememberMe" type="checkbox" value="true" style="margin-left:0px">
+                                <input name="RememberMe" type="hidden" value="false">
+                                <label for="RememberMe">Remember me?</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group" style="display:table-row">
+                        <div>
+                            <input type="submit" value="Log in" class="btn btn-default" />
+                        </div>
+                    </div>
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
-    }
-}
-else
-{
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
-}
+                    <br />
+
+                    <p>
+                        @Html.ActionLink("Register as a new user", "Register")
+                    </p>
+                    @* Enable this once you have account confirmation enabled for password reset functionality
+                <p>
+                    @Html.ActionLink("Forgot your password?", "ForgotPassword")
+                </p>*@
+                }
+            }
+        </div>
+    </li>
+</ul>
+
+    
