--- a/Stipendium/Views/Manage/Index.cshtml
+++ b/Stipendium/Views/Manage/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Stipendium.Models.IndexViewModel
+    @using System.IdentityModel;
 @{
     ViewBag.Title = "Manage";
 }
@@ -10,6 +11,17 @@
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>Account</dt>
+        <dd>
+            @if(User.IsInRole("Företag"))
+            {
+                @Html.ActionLink("Edit company information","EditCompUser")
+            }
+            else
+            {
+                @Html.ActionLink("Change your account information", "EditPrivUser")
+            }
+        </dd>
         <dt>Password:</dt>
         <dd>
             [
