--- a/Stipendium/Views/Shared/_LoginPartial.cshtml
+++ b/Stipendium/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,11 @@
     }
 </style>
 <ul class="nav navbar-nav" style="float:right">
+    @if (Request.IsAuthenticated)
+    {
+        <li class="nav-item" style="display:flex"><span style="padding: 15px; color:white;">Logged in as: @User.Identity.GetUserName()</span></li>
+    }
+    
     <li class="nav-item dropdown">
         <a style="font-size: 16px" nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
         <div class="dropdown-menu dropdown-menu-right" style="padding: 10px; min-width: 200px">
