Deleted unnecessary Models and Views. Added Search Terms model, controller. Search Terms update count and date of last search with every search. Added SQL procedure to delete long unused Search Terms.

--- a/Stipendium/Views/Admin/Index.cshtml
+++ b/Stipendium/Views/Admin/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = "Index";
     ApplicationDbContext db = new ApplicationDbContext();
+    var trendPeriod = DateTime.Now.AddDays(-14);
 }
 
 @section scripts{
@@ -16,24 +17,37 @@
     }
 </style>
 
+
 <h2>Index</h2>
 <div class="row">
     <div class="panel panel-primary col-md-3">
         <div class="panel-heading">Stiftelses</div>
         <div class="panel-body">@db.Stiftelses.Count() in record</div>
     </div>
+
     <div class="panel panel-primary col-md-3">
         <div class="panel-heading">Users</div>
         <div class="panel-body">@db.Users.Count() in record</div>
     </div>
 
+    <div class="panel panel-primary col-md-3">
+        <div class="panel-heading">SearchTerms</div>
+        <div class="panel-body">
+            <p>@db.SearchTerms.Count() in record</p>
+            <span>@db.SearchTerms.Where(st=>st.LastSearched < trendPeriod).Count() terms no longer trending.</span>
+            @Html.ActionLink("Clear?","DeleteNonTrending")
+        </div>
+    </div>
+
 </div>
-<div class="row" ng-app="StipendiumApp">
+
+
+<div class="row" ng-app="StipendiumApp" ng-controller="StipendiumController">
     <div class="panel panel-primary col-md-3">
         <div class="panel-heading">Most Popular</div>
         <div class="panel-body">
             <div style="width:100%; padding:0px">
-                <div ng-controller="StipendiumController">
+                <div>
                     <table class="table">
                         <tr ng-repeat="r in stiftelse">
                             <td>#{{r.Id}}</td>
@@ -49,13 +63,30 @@
         <div class="panel-heading">Inactive</div>
         <div class="panel-body">
             <div style="width:100%; padding:0px">
-                <div ng-controller="UsersController">
+                <div>
                     <table class="table">
                         <tr ng-repeat="r in users">
                             <td>{{r.Email}}</td>
                         </tr>
                         <tr>
                             <td><a href="/Admin/UserAccounts">Manage</a></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="panel panel-primary col-md-3">
+        <div class="panel-heading">Trending search terms</div>
+        <div class="panel-body">
+            <div style="width:100%; padding:0px">
+                <div>
+                    <table class="table">
+                        <tr ng-repeat="r in searches track by $index">
+                            <td>#{{$index + 1}}</td>
+                            <td>{{r.Term}}</td>
+                            <td>{{r.TimesSearched}} times</td>
                         </tr>
                     </table>
                 </div>
