--- a/Stipendium/Views/Home/Index.cshtml
+++ b/Stipendium/Views/Home/Index.cshtml
@@ -1,13 +1,5 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-@section scripts{
-
-    <script src="~/Scripts/StipendiumClient.js"></script>
-}
-
-<br />
-
-@{Html.RenderAction("_MostPopular");
-}
+﻿<div class="jumbotron">
+    <h1>Hello, world!</h1>
+    <p>...</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+</div>
