--- a/Stipendium/Views/Home/_MostPopular.cshtml
+++ b/Stipendium/Views/Home/_MostPopular.cshtml
@@ -17,7 +17,7 @@
         </td>
         <td>@Html.DisplayFor(modelItem=> item.ViewCount)</td>
         <td>
-            @Html.ActionLink("View", "Details", new { id=item.Stiftelse.Id })
+            @Html.ActionLink("View", "Details","Stiftelses", new { id=item.Stiftelse.Id },null)
         </td>
     </tr>
 }
